--- a/Clases/clase01.qmd
+++ b/Clases/clase01.qmd
@@ -1599,7 +1599,7 @@ $$\epsilon^{d}=\dfrac{\% \triangle Q_{d}}{\% \triangle P} = \dfrac{\dfrac{\trian
 :::
  
 ::: fragment 
-$$Var\;\%=\frac{\left ( X_{Presente}-X_{Pasado} \right )}{X_{Pasado}}*100$$
+$$Var=\frac{\left ( X_{Presente}-X_{Pasado} \right )}{X_{Pasado}}*100$$
 :::
 
 ::: fragment
@@ -1607,7 +1607,7 @@ $$Var\;\%=\frac{\left ( X_{Presente}-X_{Pasado} \right )}{X_{Pasado}}*100$$
 :::
 
 ::: fragment
-$$Var \; \%=\frac{( 14700-13000 )}{13000}*100= 13\%$$
+$$Var \; =\frac{( 14700-13000 )}{13000}*100= 13\text{%}$$
 :::
 
 ## Elasticidad
@@ -1617,15 +1617,15 @@ Digamos ahora que las cantidades de demanda (consumo), pasaron de 20 a 15, al ca
 :::
  
 ::: fragment 
-$$Var \; \% =\frac{\left ( X_{Presente}-X_{Pasado} \right )}{X_{Pasado}}*100$$
+$$Var \;  =\frac{\left ( X_{Presente}-X_{Pasado} \right )}{X_{Pasado}}*100$$
 :::
 
 ::: fragment
-$$Var\;\%=\frac{\left ( 15-20 \right )}{20}*100= -25\%$$
+$$Var\;=\frac{\left ( 15-20 \right )}{20}*100= -25\text{%}$$
 :::
 
 ::: fragment
-La elasticidad viene a ser: $e_d=\dfrac{-25\%}{13\%}=-1.92$, que significa que el cambio ha sido elástico.
+La elasticidad viene a ser: $e_d=\dfrac{-25\text{%}}{13\text{%}}=-1.92$, que significa que el cambio ha sido elástico.
 :::
 
 ## Elasticidad
