--- a/Clases/clase01.qmd
+++ b/Clases/clase01.qmd
@@ -1607,7 +1607,7 @@ $$Var=\frac{\left ( X_{Presente}-X_{Pasado} \right )}{X_{Pasado}}*100$$
 :::
 
 ::: fragment
-$$Var \; =\frac{( 14700-13000 )}{13000}*100= 13\text{%}$$
+$$Var \; =\frac{( 14700-13000 )}{13000}*100=13 \text{%}$$
 :::
 
 ## Elasticidad
@@ -1635,12 +1635,12 @@ La elasticidad viene a ser: $e_d=\dfrac{-25\text{%}}{13\text{%}}=-1.92$, que sig
 :::
 
 ::: fragment
-$$\epsilon_d = \dfrac{\text{% cambio en cantidad de demanda}}{\text{% cambio en los precios}} \leq 0$$
+$$\epsilon_d = \dfrac{\text{cambio porcentual en cantidad de demanda}}{\text{cambio porcentual en los precios}} \leq 0$$
 :::
 
 
 ::: fragment
-[Interpretación:]{.alert} «Un aumento de un uno por ciento el precio conduce a un aumento de $\epsilon_d$ por ciento en la cantidad demandada».
+[Interpretación:]{.alert} Un aumento de un uno por ciento el precio conduce a un aumento de $\epsilon_d$ por ciento en la cantidad demandada».
 :::
 
 - $\epsilon_d < -1$ ==> la demanda es [elastica]{.alert} o [sensible]{.alert} a cambios en el precio.
